2004-01-09  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-xref.xsl:
	- Revert link back to the correct behavior.

2004-01-09  Eric Baudais  <drake@gnome.org>

	*test/testdoc1/testdoc1.xml: 
	- Fixed the test doc so everything is valid DocBook.

2004-01-09  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-chunk.xsl:
	- Some glossary work.

	* stylesheets/gettext.xsl:
	- Strip trailing space from number-less headers.

	* test/testdoc1/testdoc1.xml:
	- Some glossary test stuff.

2004-01-08  Shaun McCance  <shaunm@gnome.org>
See stylesheets/ChangeLog for previous stylesheet changes

2004-01-08  Shaun McCance  <shaunm@gnome.org>

	* po/POTFILES.in:
	- Made translations work in XSLT, still need to do plurals.

2004-01-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-man-parser.c:
	- Gobs more work on the man page parser.

2004-01-07  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Error dialog for invalid ghelp: URI.

2004-01-07  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-error.c:
	* src/yelp-error.h:
	* src/yelp-toc-pager.c:
	* src/yelp-window.c:
	- Consolidated all the GError-making in yelp-error.c.

2004-01-05  Shaun McCance  <shaunm@gnome.org>

	* data/Makefile.am:
	* data/default.css:
	* src/yelp-theme.c:
	* src/yelp-theme.h:
	- Added default CSS file.

	* src/yelp-toc-pager.c:
	- Switched to using GString for writing the page.
	- Put content writing in a separate function, to make inlining easier.

2004-01-03  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/test-pager.c:
	- Make test-pager work again.

2004-01-03  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" in ALL_LINGUAS.

2004-01-02  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-html-gtkhtml2.c:
	* src/yelp-html.h:
	* src/yelp-window.c:
	- Started working on the jump-to-anchor thing.

2004-01-02  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Implement yelp:chunk-depth PI.
